fix: contact page alignment and re-align fields and enlarge pic on page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1253,19 +1253,26 @@ form label {
    .pos-bookingform {
        margin-top: 20px;
        margin-bottom: 20px;
-       margin-left: 350px;
-       width: 380px;
-       height: 400px;
+       margin-left: 100px;
+       width: 380px; 
+       height: 480px;
        padding: 20px;
        padding-top: 40px;
        float: left;
    }
    input[type=text],input[type=email],input[type=date],textarea{
      background: transparent;
-     width: 50%;
+     width: 100%;
      height: 25px;
      margin: 5px 0 20px 0;
    }
+   input[type=submit]{
+     margin-left: 70px;
+   }
+   input[type=reset] {
+    background-color: #ebba34;
+   }
+
    .pos-bookingform h3 {
      padding-bottom: 30px;
    }
@@ -1282,7 +1289,7 @@ form label {
      padding-right: 10px;
    }
    .form_textarea > textarea {
-     margin-left: 120px;
+     margin-left: 0px;
      height: 65px;
    }
    .basepic{
@@ -1297,8 +1304,9 @@ form label {
        margin-left: 80px;
    }
    .basepic img{
-       max-width: 375px;
-       max-height: 375px;
+       max-width: 810px;
+       max-height: 810px;  
+       margin-left: 0px;         
    }  
 }
 /* media query for external 21inch Samsung monitor*/ 
